<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/corner_radius_cardview">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <ImageView
            android:id="@+id/pictureCards"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:scaleType="center"
            android:transitionName="@string/transtiorname_picture"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"

            android:background="@color/backgroun_text_card">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userNemaCard"
                android:text="@string/userNameCard"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_username_card"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstWord"
                    android:text="@string/firstWordCard"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_fisrstWord_card" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timeCard"
                    android:text="@string/timecard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_fisrstWord_card"
                    android:layout_marginLeft="@dimen/margin_card_timecard_card"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTop_like">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/likeCheckCard"
                    android:button="@drawable/checkbox_selector"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/likenamecArd"
                    android:text="@string/line_nomber_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_fisrstWord_card"
                    android:layout_marginLeft="@dimen/margin_card_timecard_card"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>